# chess-analyzer

./: .flake8  .gitignore  .travis.yml  Makefile  README.md  chess_analyzer.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
chess_analyzer/: analysis.py  click.py  core.py  download.py  download_chess_dot_com.py  download_lichess.py
docs/: .readthedocs.yml  conf.py  index.rst
test/: test_analysis.py  test_click.py  test_core.py  test_download.py  test_download_chess_dot_com.py  test_download_lichess.py  test_game.json  test_game.pgn  test_game_enriched.json  test_pgn_game_set.txt  test_pgn_game_set_lichess.txt
