[tool.poetry]
name = "chess-analyzer"
version = "0.0.1"
description = "\"A small library for analyzing chess games.\""
authors = ["Alex C. Viana <alexcostaviana@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.1"
requests = "^2.24.0"
click = "^7.1.2"



[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
responses = "^0.12.0"
pytest-coverage = "^0.0"
black = "^20.8b1"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
